Coverity analysis defect 116952: Uninitialized scalar variable

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.9.0
    • Affects Version/s: None
    • Component/s: None
    • Fully Compatible
    • ALL
    • Query Execution 2021-02-22
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar variable

      The variable will contain an arbitrary value left from earlier computations. Use of an uninitialized variable
      /src/mongo/db/exec/sbe/parser/parser.cpp:917: UNINIT 116952 Declaring variable "dropKeepPos" without initializer.
      /src/mongo/db/exec/sbe/parser/parser.cpp:952: UNINIT 116952 Using uninitialized value "dropKeepPos" when calling "operator []". [Note: The source code implementation of the function has been overridden by a builtin model.]

            Assignee:
            Ian Boros
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: