SERVER-53891 Fix read from uninitialized variable in SBE parser